--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+   <div class="container">
     <form id="form">
         <input id="input" type="number" placeholder="masofa-kiriting">
         <button id="button">xisobla</button>
@@ -35,6 +36,7 @@
             <h2 id="piyoda"> N</h2>
         </li>
     </ul>
+   </div>
     <script src="./index.js"></script>
 </body>
 </html>
